--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ nav {
 a {
     text-decoration: none;
     color: rgb(58, 58, 58);
-    margin-left: 200px;
+    margin-left: 180px;
 }
 
 ul {
@@ -49,9 +49,20 @@ li {
     margin-top: 5.5%;
 }
 
-/* .home{
+
+.home:hover{
     font-weight: bold;
-} */
+}
+.productos:hover{
+    font-weight: bold;
+}
+.servicios:hover{
+    font-weight: bold;
+}
+.nosotros:hover{
+    font-weight: bold;
+}
+
 
 
 .parallax {
@@ -94,6 +105,10 @@ li {
     color: #f1f1f1;
     border: #f1f1f1;
 } */
+
+.boton__principal:hover{
+    font-weight: bold;
+}
 
 
 
@@ -149,6 +164,10 @@ li {
     color: #f1f1f1;
     background-color: #474747;
 } */
+.boton__secundario:hover{
+    font-weight: bold;
+    background-color: #dbdbdb;
+}
 
 
 .opciones{
@@ -184,6 +203,9 @@ footer .contacto{
     font-weight: normal;
     margin-top: 5%;
     margin-left: 0%;
+}
+.contacto:hover{
+    font-weight: bold;
 }
 
 
@@ -240,6 +262,13 @@ footer .contacto{
     grid-row-gap: 0.20%;
 }
 
+.foto{
+    border-radius: 12px;
+    transition: all 2s;
+}
+.foto:hover{
+    transform: scale(1.1); 
+}
 
 
 
@@ -286,19 +315,18 @@ footer .contacto{
     color: #0e0e0e;
     margin-bottom: 3%;
 }
-/* .img__nosotros{
-    width: 0.2%;
+.fotoNos{
+    border-radius: 10px;
+    width: 70%;
     height: auto;
-} */
+    margin-left: 22%;
+}
 
 .sobre__nos{
-    margin-left: 3%;
     margin-right: 3%;
-    margin-bottom: 0%;
     align-items: flex-start;
     display: grid;
-    grid-template-columns: 55% 40%;
-    grid-column-gap: 2.5%;
+    grid-template-columns: 40% 60%;
 }
 
 
@@ -349,56 +377,6 @@ footer .contacto{
 
 
 /*grid areas*/ /*RESPONSIVO*/
-
-
-
-
-
-/* vista desktop
-@media only screen and (min-width: 1024px){
-
-    /* index 
-    body{
-        background-color: yellow;
-    }
-    
-    .gridContainer{
-        display: grid;
-        grid-template-areas:
-        "logo nav nav nav nav nav"
-        "section section section section section section"
-        "footer footer footer footer footer footer";
-        grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: auto auto auto;
-    }
-    
-    header {
-        grid-area: logo;
-    }
-    nav {
-        grid-area: nav;
-    }
-    section {
-        grid-area: section;
-    }
-    footer {
-        grid-area: footer;
-    }
-    
-    .navFlex{
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-        position: relative;
-        top: 10px;
-    }
-    .footerFlex{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-    }
-    
-} */
 
 
 .logo{
@@ -507,9 +485,12 @@ footer .contacto{
         margin-bottom: 0%;
         align-items: flex-start;
         display: grid;
-        grid-template-columns: 100%;
-        
+        grid-template-columns: 100%;  
     }
+
+.fotoNos{
+    margin-left: 0%;
+}
 } 
 
 
