--- a/css/style.css
+++ b/css/style.css
@@ -205,12 +205,30 @@ footer {
 
 .prod__serv__opciones h4 {
   font-family: "Montserrat", sans-serif;
-  font-size: 12px;
+  font-size: 15px;
   font-weight: 400;
   font-style: normal;
-  color: #0e0e0e;
+  color: #969696;
+  margin-top: 3%;
   margin-left: 3%;
-  margin-top: 8%; }
+  margin-right: 3%;
+  margin-bottom: 2%;
+  padding-bottom: 0.75%;
+  border-bottom-color: #dbdbdb;
+  border-bottom-width: 0.3px;
+  border-bottom-style: solid; }
+
+.carruseles {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 0 3% 3% 3%;
+  grid-gap: 10px; }
+
+.videos {
+  display: grid;
+  grid-template-columns: repeat(2, 0.5fr);
+  padding: 0 3% 0 3%;
+  grid-gap: 10px; }
 
 .galeria {
   display: grid;
