--- a/sass/style.scss
+++ b/sass/style.scss
@@ -159,16 +159,37 @@ $font: 'Montserrat', sans-serif;
     text-align: center;
     margin-top: 8%;
 }
+
+// SERVICIOS
 .prod__serv__opciones h4{
     font-family: $font;
-	font-size: 12px;
+	font-size: 15px;
 	font-weight: 400;
 	font-style: normal;
-    color: #0e0e0e;
+    color: #969696;
+    margin-top: 3%;
     margin-left: 3%;
-    margin-top: 8%;
+    margin-right: 3%;
+    margin-bottom: 2%;
+    padding-bottom: 0.75%;
+    border-bottom-color: #dbdbdb;
+    border-bottom-width: 0.3px;
+    border-bottom-style: solid;
+}
+.carruseles{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 3% 3% 3%;
+    grid-gap: 10px;
+}
+.videos{
+    display: grid;
+    grid-template-columns: repeat(2, 0.5fr);
+    padding: 0 3% 0 3%;
+    grid-gap: 10px;
 }
 
+// PRODUCTOS
 .galeria{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
