--- a/sass/style.scss
+++ b/sass/style.scss
@@ -167,10 +167,7 @@ $font: 'Montserrat', sans-serif;
 	font-weight: 400;
 	font-style: normal;
     color: #969696;
-    margin-top: 3%;
-    margin-left: 3%;
-    margin-right: 3%;
-    margin-bottom: 2%;
+    margin: 3% 3% 2% 3%;
     padding-bottom: 0.75%;
     border-bottom-color: #dbdbdb;
     border-bottom-width: 0.3px;
@@ -419,6 +416,20 @@ $font: 'Montserrat', sans-serif;
     }
     .foto:nth-child(23) {
         grid-row-start: span 2;
+    }
+
+    // SERVICIOS
+    .carruseles{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        padding: 0 3% 3% 3%;
+        grid-gap: 10px;
+    }
+    .videos{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        padding: 0 3% 0 3%;
+        grid-gap: 10px;
     }
 
     /*NOSOTROS*/
