--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,31 @@ footer {
 
 /* ------------------------------------------------------------------------------------------------ */
 /* estilo CONTACTO */
+.bot--ig {
+  background-color: #ac00a4a2;
+  padding: 0.3% 1% 0.5% 1%;
+  border-radius: 10%;
+  color: #f1f1f1; }
+
+.bot--fb {
+  background-color: #0000ffbd;
+  padding: 0.3% 1% 0.5% 1%;
+  border-radius: 10%;
+  color: #f1f1f1; }
+
+.bot--wa {
+  background-color: #03a04ab9;
+  padding: 0.3% 1% 0.5% 1%;
+  border-radius: 10%;
+  color: #f1f1f1; }
+
+.bot, .bot--ig, .bot--fb, .bot--wa {
+  margin-left: 1%;
+  border-color: #f1f1f1; }
+
+.bot--ig {
+  margin-left: 3%; }
+
 .contacto h6 {
   font-family: "Montserrat", sans-serif;
   font-size: 2em;
@@ -347,15 +372,6 @@ footer {
 
 .btn-primary:hover {
   background-color: #005757; }
-
-.rrss {
-  font-family: "Montserrat", sans-serif;
-  font-size: 22px;
-  font-weight: 450;
-  font-style: normal;
-  color: #0e0e0e;
-  margin-left: 3%;
-  margin-bottom: 10%; }
 
 /* ------------------------------------------------------------------------------------------------ */
 /*grid areas*/
