--- a/sass/style.scss
+++ b/sass/style.scss
@@ -181,9 +181,10 @@ $font: 'Montserrat', sans-serif;
 }
 .videos{
     display: grid;
-    grid-template-columns: repeat(2, 0.5fr);
+    grid-template-columns: repeat(2, 1fr);
     padding: 0 3% 0 3%;
     grid-gap: 10px;
+    justify-items: center;
 }
 
 // PRODUCTOS
@@ -352,7 +353,6 @@ $font: 'Montserrat', sans-serif;
 .header{
     grid-area: head;
 }
-
 
 
 
